--- a/DevOps4Ops/devops4ops.stripped.html
+++ b/DevOps4Ops/devops4ops.stripped.html
@@ -23,7 +23,7 @@ Stephen Curran, Cloud Compass Computing, Inc.<br><font size="2"><a href="http://
 
 # DevOps For Ops Teams
 
-1. Introduction(s)
+1. .bold.red[Introduction - What's the Challenge?]
 1. Agile, Continuous Delivery and the Three Ways
 2. Applying DevOps
 3. Tooling/Automation
@@ -43,14 +43,15 @@ Key concept you'll hear - shift left - it applies
 ---
 # Approach
 
-The course will be presented with a mixture of presentation, exercises and most importantly, discussion. Please, jump in at a time with questions, comments, suggestions, snorts, etc. The goal is the material is presented in _your_ context.
+The course will be presented with a mixture of presentation, exercises and most importantly, .bold.red[discussion].
+
+Please, jump in at a time with questions, comments, suggestions, snorts, etc. The goal is the material is presented in _your_ context.
 
 
 Logistics...
 
 * Any constraints on time?
-* Washrooms
-* Food and beverages
+* Anything else to mention?
 
 ---
 
@@ -76,9 +77,9 @@ Logistics...
 * Agile/DevOps Development Leader
 * DevOps before DevOps - 2001
 * Currently BC Government Projects
-  * Identity on the Internet w/Blockchain
+  * Internet Identity w/Blockchain
 
-<img style="width:55%;"  src="images/NobodyKnowsADog.jpg" alt="Nobody Knows You're a Dog">
+<img style="width:50%;"  src="images/NobodyKnowsADog.jpg" alt="Nobody Knows You're a Dog">
 ]
 
 ???
@@ -110,7 +111,7 @@ DevOps (a clipped compound of "software DEVelopment" and "information technology
 
 ???
 DevOps - not a straight forward "product"/"thing"
-* Name of a conference presentation
+* First use - Name of a conference presentation
 * Cultural component - improving communications and shared goals
 * Lean component - continuous improvement
 * Automation and tools
@@ -131,13 +132,13 @@ So lets hold off on "What is it" and go to...
 ]
 
 .right-column[
-* Ops - runs the code
+* Ops - run the code
    * Servers
    * Networks
    * Databases
 ]
 
-
+???
 NOTE: DevOps is Development Methodology agnostic, but Agile requires DevOps.
 ---
 # Backup a bit - what's an app?
@@ -345,13 +346,9 @@ A day - or several - fixing things
 * We *almost* did it right, we just need to do it .red[*better*] next time
 * Test more - take our time, check _EVERYTHING_
 
-
-
 * For now, though... .red.bold[DON'T CHANGE ANYTHING!!]
 
-
-
-* Except - users want more fixes/capabilities
+* Except - demand builds from **_everywhere_** for fixes/capabilities
 
 
 <img src="images/WallOfConfusionChange.png" alt="The Wall of Confusion - Change" width="45%" >
@@ -365,7 +362,18 @@ A day - or several - fixing things
 class: center, middle
 # Discussion - real life examples
 ---
-# What do we do?
+
+# DevOps For Ops Teams
+
+1. Introduction - What's the Challenge?
+1. .bold.red[Agile, Continuous Delivery and the Three Ways]
+2. Applying DevOps
+3. Tooling/Automation
+4. Cross Cutting Concerns
+5. Summary/Wrap-Up
+
+---
+# Industry Response
 
 
 .left-column[## ITIL
@@ -377,6 +385,7 @@ class: center, middle
 * Conceptually, ITIL approach is good, but implementations tend to assume:
    * We *almost* did it right, we just need to do it .red[*better*] next time
    * Test more - take our time, check *EVERYTHING*
+   * Culturally - directive/top down
 ]
 
 
@@ -393,7 +402,7 @@ class: center, middle
 ???
 
 ---
-# What do we do?
+# Adding to the Challenge
 
 ## Enter: Agile Development Methodologies
 
@@ -410,11 +419,11 @@ In fact - can be worse - Lean Initiative at the Business level
 * Creates demand at the front end
 ---
 
-# What do we do?
+# Another Approach
 
 ## How what about applying Agile...
-.left-column[#### ...to the value delivery process]
-.right-column[<img src="images/AgileManifesto.jpg" alt="Agile Manifesto" width="80%" >]
+.left-column[#### ...to the **_value delivery process_**]
+.right-column[<img src="images/AgileManifesto.jpg" alt="Agile Manifesto" width="70%" >]
 
 .footnote[.red.bold[*] The Agile Manifesto - http://agilemanifesto.org/]
 
@@ -461,13 +470,25 @@ In fact - can be worse - Lean Initiative at the Business level
  * Global, not local, optimizations
  * Prevent defects from flowing
  * Identify and eliminate bottlenecks
- * Enable a "Roll-forward" approach
+     * **_Spoiler Alert_**: Manual processes tend to be defect and bottleneck sources...
+ * Enable a "Roll-forward" mindset
 
 ???
 
  Business value - nothing until product is released
  System end to end requires a cross-functional team
  Eliminating defects also means eliminating human steps
+
+---
+
+# The First Way: Flow (Systems Thinking)
+
+<img src="images/First_Way_Flow.png" alt="The First Way: Flow" width="40%" >
+
+* Examples
+  * Build, Test and Deployment Automation
+  * Consistency across environments (Sandbox, Dev, Test, Prod)
+  * Easy environment creation - servers, connectivity, databases, etc.
 
 ---
 
@@ -485,19 +506,20 @@ In fact - can be worse - Lean Initiative at the Business level
   * Respond quickly, adjust processes
   * Empower contributors
   * Enable understanding of .bold[*Value*]
-
+  * Normalize _The First Way_
 ---
 
-# The Third Way:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Continual Learning and Experimentation
+## The Third Way:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Continual Learning and Experimentation
 
 * Theorize, Test, Evaluate - and repeat
   * Low risk, high return
+  * Small batch sizes
 
 
 <img src="images/Third_Way.png" alt="The Third Way: Continual Learning and Experimentation" width="35%" >
 
 
-* Beyond the minimum
+* Drive new business value
   * Faster feedback / Fast fail
   * More reliable processes
   * Better capabilities
@@ -513,9 +535,9 @@ In fact - can be worse - Lean Initiative at the Business level
 # Summary: DevOps - The Three Ways
 
 * A cultural change
-  * End to end thinking - Lean
+  * End to end thinking in the application of Lean
   * Feedback (visibility and communication) across the full team
-  * Managed Experiments - in the form of rapid, small deliveries
+  * Managed experiments - in the form of rapid, small deliveries
 
 
 
@@ -523,6 +545,16 @@ In fact - can be worse - Lean Initiative at the Business level
 
 
 <img src="images/DevOpsHandBook.jpg" alt="DevOps Handbook" width="22%" >
+
+---
+# DevOps For Ops Teams
+
+1. Introduction - What's the Challenge?
+2. Agile, Continuous Delivery and the Three Ways
+3. .bold.red[Applying DevOps]
+4. Tooling/Automation
+5. Cross Cutting Concerns
+6. Summary/Wrap-Up
 
 ---
 
@@ -537,11 +569,11 @@ In fact - can be worse - Lean Initiative at the Business level
 
 ---
 
-## Value Stream Mapping
+## Value Stream Mapping - The First Way
 
 * Lean process
   * Define the bounds of the process - e.g "Adding a feature to a report"
-  * Map the steps to go from inputs to delivered value
+  * Map the steps to go from inputs to delivered value - **end to end**
   * Categorize steps as adding value or not
   * Assess the quality of each step - rework generated, wait times
   * Measure the overall time for each step
@@ -573,18 +605,22 @@ Cut the 1 week in the queue to 1 day, efficiency goes to:
 ---
 # Aside: My Team's Journey
 
+.left-column[
+&nbsp;
+&nbsp;
 * Development and Ops Team
 * "Demanding", "Fickle" Management
 * "Must Have" releases - ready or not
+* Thrashing - jumping between features
 * Poor quality software
-  * Why? Release meant - "take everything"
+   * Server errors, outages
+]
 
-
-
+.right-column[
 * Approach:
-  * Map the process - what are we doing?
-  * Figure out what hurt the most
-  * Stop the pain
+  * Map the delivery process
+  * Figure out what hurts the most
+  * Stop that pain
   * Repeat
 
 
@@ -594,6 +630,7 @@ Cut the 1 week in the queue to 1 day, efficiency goes to:
   * Release intervals dropped to daily - weekly
   * Product quality went way up
   * Value delivery cadence went way up
+]
 ---
 
 # Organizational Structure - Conway's Law
@@ -639,9 +676,9 @@ Is it the right approach?
 ???
 Picture - Monolith vs. Microservices -
 ---
-# Work Tracking and Organization (aka JIRA)
+## Work Tracking and Organization (aka JIRA)
 
-## Key continuous improvement enabler
+### Key continuous improvement enabler
 
 * Awareness of what is being done / Visibility
   * No Excel!
@@ -658,7 +695,7 @@ Picture - Monolith vs. Microservices -
 * When tied to version control - "free" documentation
 
 
-### Don't overthink it (overtrack)<br>...but don't underthink it either.
+#### Don't overthink it (overtrack)<br>...but don't underthink it either.
 
 ???
 * Every field needs to EARN the right to be on the form
@@ -668,7 +705,7 @@ Picture - Monolith vs. Microservices -
   * Does it drive work?
 
 ---
-# Work Tracking: Kanban Board and Metrics
+## Work Tracking: Kanban Board and Metrics
 
 .left-column[
 <img src="images/KanbanBoard.png" alt="Kanban Board" width="90%" >
@@ -681,7 +718,7 @@ Control:
 
 .left-column[
 
-### Cumulative Flow Diagram
+#### Cumulative Flow Diagram
 
 <img src="images/CFD-Kanban.png" alt="Cumulative Flow Diagram" width="95%" >
 
@@ -701,7 +738,7 @@ EXERCISE - Kanban board design - columns, WIP limits, distributing work
 
 ---
 
-# Work Tracking: Version Control Integration
+## Work Tracking: Version Control Integration
 
 * Trace from business change (Issue Tracking) to code change
 
@@ -794,17 +831,27 @@ EXERCISE - Org Structure of their team - impact
 ???
 Discussion: what is the
 ---
-# Section: Automation and Tools
+# DevOps For Ops Teams
 
+1. Introduction - What's the Challenge?
+2. Agile, Continuous Delivery and the Three Ways
+3. Applying DevOps
+4. .bold.red[Tooling/Automation]
+5. Cross Cutting Concerns
+6. Summary/Wrap-Up
+---
 .center[
-### DevOps: cultural change enabled by powerful tools
+### DevOps: cultural change enabled by _powerful tools_
 ]
-<img src="images/XebiaLabsPeriodicTableDevOps.png" alt="Periodic Table of DevOps" width="75%" >
+
+<img src="images/XebiaLabsPeriodicTableDevOps.png" alt="Periodic Table of DevOps" width="85%" >
 
 .footnote[Credit - Xebia Labs - https://xebialabs.com/periodic-table-of-devops-tools/]
+
 ???
 Exercise - tools to address a section of their value stream or a pre-canned one oriented to Ops - provisioning server - collaboration and automation
 ---
+
 # Automation and Tools: Enabling Factors
 
 ## Open Source
@@ -974,6 +1021,15 @@ WARNING: COTS Software - especially from early 2000s
 * #### .black[Logging - Logstash]
 
 ---
+# DevOps For Ops Teams
+
+1. Introduction - What's the Challenge?
+2. Agile, Continuous Delivery and the Three Ways
+3. Applying DevOps
+4. Tooling/Automation
+5. .bold.red[Cross Cutting Concerns]
+6. Summary/Wrap-Up
+---
 
 # Section: Cross Cutting Concerns
 
@@ -1032,7 +1088,7 @@ Verification of standards - database, security, look and feel, etc., etc.
   * Security Test Framework
 
 ---
-## Approaches to Testing: Production - Early and Often
+### Approaches to Testing: Production - Early and Often
 
 
 * Regularly push builds out as far as possible
@@ -1110,7 +1166,7 @@ Traditional approach - 1, 3, and fix in production
 
 ---
 
-## Risk Mitigation: Aggressively Eliminate Dependencies
+### Risk Mitigation: Aggressively Eliminate Dependencies
 
 
 .right-column[<img src="images/DecoupledReleases.png" alt="Decoupled Releases" width="100%" >]
@@ -1203,7 +1259,7 @@ Architectural Dependencies
 * Outage detection but limited learning
 
 ---
-## Logging/Monitoring (The Second Way - Feedback)
+## Logging/Monitoring (The Second Way)
 
 #### DevOps approaches
 
@@ -1264,7 +1320,15 @@ Architectural Dependencies
    * Generated from source code
 
 ---
+# DevOps For Ops Teams
 
+1. Introduction - What's the Challenge?
+2. Agile, Continuous Delivery and the Three Ways
+3. Applying DevOps
+4. Tooling/Automation
+5. Cross Cutting Concerns
+6. .bold.red[Summary/Wrap-Up]
+---
 # Summary
 
 #### .black[&nbsp;&nbsp; The Three Ways]
@@ -1292,7 +1356,7 @@ Architectural Dependencies
 
 ---
 
-## Culture, Automation, Lean, Measurement, Sharing (CALMS)
+### Culture, Automation, Lean, Measurement, Sharing
 
 
 .left-column[
@@ -1329,6 +1393,8 @@ Architectural Dependencies
 
 ]
 
+???
+CALMS
 ---
 
 ###What is DevOps?
