Adjustments to the slide speaker notes

--- a/DevOps4Ops/devops4ops.md.html
+++ b/DevOps4Ops/devops4ops.md.html
@@ -375,7 +375,7 @@ Whys:
 
 .center[<img src="images/dayafter.jpg" alt="The Day After" width="75%" >]
 
-.footnote[CCredit: Twentieth Century Fox - _The Day After_]
+.footnote[Credit: Twentieth Century Fox - _The Day After_]
 ???
 
 * Users can't log in
@@ -417,7 +417,12 @@ A day - or several - fixing things
 
 ???
 class: center, middle
-# Discussion - real life examples
+
+That's the problem - one team creates, one team operates and there is friction in the middle
+
+And in solving that - we'll discover even more benefits
+
+Discussion - real life examples
 ---
 
 # DevOps For Ops Teams
@@ -518,6 +523,12 @@ In fact - can be worse - Lean Initiative at the Business level
   * Same principles apply for delivering any kind of digital business value
   * Same culture, approach, techniques and (some) tools apply
 ]
+
+???
+
+Styled after "The Goal" by Dr. Eliyahu Goldratt
+Production problems at a Manufacturing company - using non-traditional approaches to optimize Performance
+
 ---
 
 # The First Way: Flow (Systems Thinking)
@@ -659,7 +670,7 @@ In fact - can be worse - Lean Initiative at the Business level
 .center[
 #### Value: 0.08 + 2 + 1 + 16 + 0.5 = 19.58 hours<br>Waste: 0.08 + 24 + 40 + 8 = 72.08 hours
 
-### Efficiency = Value / Total Time = 19.58 / 91.64 = 21%
+### Efficiency = Value / Total Time = 19.58 / 91.66 = 21%
 ]
 ???
 Cut the 1 week in the queue to 1 day, efficiency goes to:
